# etl_json

./: README.md  coleta.parquet  etl.py  pipeline.py  pyproject.toml
decorators/: utils_log.py
